# OS

./: lab1.sh  Процессы.doc
Channel/: buffered_channel.h  main.cpp
Main/: CMakeLists.txt  Main.sln  main.cpp
Main/Main/: Main.cpp  Main.vcxproj
Main/Main/x64/Debug/: vc143.idb
Main/Main/x64/Debug/Main.tlog/: Main.lastbuildstate
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Matrix_channel/: CMakeLists.txt  Matrix.cpp  Matrix.h  buffered_channel.cpp  buffered_channel.h  main.cpp
Numbers/: CMakeLists.txt  numbers.cpp  numbers.h
Pipes(linux)/ProccesA/: main.cpp
Pipes(linux)/ProccesP/: main.cpp
Pipes(linux)/ProccesS/: main.cpp
Pipes(linux)/pipes/: main.cpp
Pipes/Pipes/: CMakeLists.txt  main.cpp
Pipes/ProccesA/: CMakeLists.txt  main.cpp
Pipes/ProccesM/: CMakeLists.txt  main.cpp
Pipes/ProccesP/: CMakeLists.txt  main.cpp
Pipes/ProccesS/: CMakeLists.txt  main.cpp
Process(linux)/Killer/: CMakeLists.txt  main.cpp
Process(linux)/User/: CMakeLists.txt  main.cpp
Process/Killer/: CMakeLists.txt  killer.cpp
Process/User/: CMakeLists.txt  main.cpp
StaticNumber/: StaticNumber.sln
StaticNumber/Number/: Number.cpp  Number.h  Number.vcxproj  Number.vcxproj.filters
StaticNumber/Number/x64/Debug/Number.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  (+3 more)
StaticNumber/x64/Debug/: Number.idb  Number.lib
Vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector.sln
Vector/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
Vector/Vector/x64/Debug/: Vector.dll.recipe  Vector.ilk  vc143.idb
libs/: a.out
(+7 files in other folders)
